fix: add bigger font on mobile

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -146,7 +146,7 @@
         font-size: 2vw;
     }
     .welcome_description {
-        font-size: 2vw;
+        font-size: 3vw;
     }
     h1 {
         font-size: 3rem;
